# stromboli-multiqc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: sample.stromboli_qc.json
multiqc_stromboli/: __init__.py  parse.py  plugin.py  stromboli.py
tests/: test_integration.py  test_parse.py
