[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiqc-stromboli"
version = "0.1.0"
description = "MultiQC plugin for the STROMBOLI barcode-variant mapping pipeline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Chris Macdonald", email = "cbmacdo@gmail.com" }]
keywords = ["multiqc", "bioinformatics", "DMS", "nanopore", "stromboli"]
dependencies = ["multiqc>=1.20"]

[project.urls]
"STROMBOLI pipeline" = "https://github.com/odcambc/STROMBOLI"

# MultiQC discovers the plugin through these entry points once it is installed.
[project.entry-points."multiqc.modules.v1"]
stromboli = "multiqc_stromboli.stromboli:MultiqcModule"

[project.entry-points."multiqc.hooks.v1"]
before_config = "multiqc_stromboli.plugin:before_config"

[dependency-groups]
dev = ["pytest>=8"]

# Project name normalizes to "multiqc_stromboli", which hatchling auto-detects as the
# package, so no explicit build target config is needed.
